# greet-plugins

./: .gitignore  LICENSE  README.md  greeter.wai  host.wai
english-rs/: Cargo.toml  LICENSE_MIT  README.md  english_rs.wasm  greeter.wai  host.wai
english-rs/src/: lib.rs
english-rs/wit/: greeter.wit
i18n-greeter/: Cargo.toml
i18n-greeter/src/: main.rs
