[package]
name = "english-rs"
version = "0.1.2"
description = "Simple greeter in English"
authors = ["JP Moresmau <jp@moresmau.fr>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wai-bindgen-rust = "0.2.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[package.metadata.wapm]
namespace = "JPMoresmau"  # The namespace to publish it to
abi = "none" # How to compile the crate. "none" is "wasm32-unknown-unknown"
bindings = { wai-version = "0.2.0", exports = "greeter.wai" }
