[package]
name = "i18n-greeter"
version = "0.1.0"
edition = "2021"
authors = ["JP Moresmau <jp@moresmau.fr>"]

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
llvm-sys = "140.0.5"
wasmer = "3.2.0-beta.2"
wasmer-compiler-llvm = "3.2.0-beta.2"
wai-bindgen-wasmer = {version ="0.2.5", features= ["sys"] }

